add main-hero section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </ul>
 
               <div class="header-controls">
-                <button class="btn btn-outline">Log in</button>
+                <button class="btn btn--md">Log in / Sign Up</button>
               </div>
             </div>
           </div>
@@ -55,7 +55,27 @@
     </header>
 
     <main>
-      asdasd
+      <div class="section hero main-hero">
+        <div class="container">
+          <div class="row">
+            <div class="col col-12 col-lg-8 col-xl-7">
+              <div class="title-group">
+                <h1 class="title title--extra-lg color--white">
+                  Take Your Trading To the Next Level
+                </h1>
+
+                <p class="text text--lg color--dark-gray">
+                  Unlock Your Full Trading Potential with Our Cutting-Edge Tools and Expert Support
+                </p>
+
+                <button class="btn btn--lg btn--arrow -responsive">Open Account</button>
+              </div>
+            </div>
+
+            <div class="col col-12 col-lg-4 col-xl-5"></div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
