--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <div class="section hero main-hero">
+      <section class="section hero main-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-lg-8 col-xl-7">
@@ -75,7 +75,204 @@
             <div class="col col-12 col-lg-4 col-xl-5"></div>
           </div>
         </div>
-      </div>
+      </section>
+
+      <section class="section asset-classes">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="title-group__wrapper -responsive">
+                <div class="title-group" style="max-width: 500px;">
+                  <h2 class="title title--lg color--black">
+                    Access to 8 Asset Classes
+                  </h2>
+                </div>
+  
+                <button class="btn btn--lg btn--arrow -responsive">Start Trading</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="row g-20px">
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/candle.svg" alt="candle"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Forex Trading</h4>
+                    <p class="card--text text--sm color--dark-gray">All global currency pairs</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/gold.svg" alt="gold"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Gold Trading</h4>
+                    <p class="card--text text--sm color--dark-gray">Discover the advantages</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/pick.svg" alt="pick"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Precious Metals</h4>
+                    <p class="card--text text--sm color--dark-gray">Silver, Palladium and more</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/oil.svg" alt="oil"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">CFDs on Energy</h4>
+                    <p class="card--text text--sm color--dark-gray">Oil, Gas and all major energies</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/arrows-up.svg" alt="arrows-up"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Commodities</h4>
+                    <p class="card--text text--sm color--dark-gray">Major global commodities</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/status-up.svg" alt="status-up"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Stocks</h4>
+                    <p class="card--text text--sm color--dark-gray">Over 200 companies</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/graph.svg" alt="graph"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Shares</h4>
+                    <p class="card--text text--sm color--dark-gray">Buy and sell popular shares</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="/images/icons/chart.svg" alt="chart"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--lg color--black">Equity Indices</h4>
+                    <p class="card--text text--sm color--dark-gray">Major global indices</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="section asd">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="title-group__wrapper -responsive">
+                <div class="title-group" style="max-width: 500px;">
+                  <h2 class="title title--lg color--black">
+                    It is easy to start
+                  </h2>
+
+                  <p class="text text--md color--black">
+                    Join the thousands of traders worldwide that choose to trade with us
+                  </p>
+                </div>
+  
+                <button class="btn btn--lg btn--arrow -responsive">Start Trading</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="row  g-20px">
+
+            <div class="col col-12 col-lg-4">
+              <div class="card__wrapper">
+                <div class="card card--lg card--black">
+                  <div class="card--index">01</div>
+
+                  <div class="card__content">
+                    <h4 class="card--title title--sm color--black">Create an Account</h4>
+                    <p class="card--text text--md color--dark-gray">
+                      Sign up for an account by providing your basic information and completing the registration process.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-lg-4">
+              <div class="card__wrapper">
+                <div class="card card--lg card--orange">
+                  <div class="card--index">02</div>
+
+                  <div class="card__content">
+                    <h4 class="card--title title--sm color--black">Fund Your Account</h4>
+                    <p class="card--text text--md color--dark-gray">
+                      Choose from a variety of convenient payment methods to deposit funds into your trading account.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-lg-4">
+              <div class="card__wrapper">
+                <div class="card card--lg card--blue">
+                  <div class="card--index">03</div>
+
+                  <div class="card__content">
+                    <h4 class="card--title title--sm color--black">Start Trading</h4>
+                    <p class="card--text text--md color--dark-gray">
+                      You can start exploring the markets, executing trades, and taking advantage of trading opportunities.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
