--- a/index.html
+++ b/index.html
@@ -226,13 +226,15 @@
           <div class="row  g-20px">
 
             <div class="col col-12 col-lg-4">
-              <div class="card__wrapper">
-                <div class="card card--lg card--black">
-                  <div class="card--index">01</div>
+              <div class="card-big__wrapper">
+                <div class="card-big card-big--orange">
+                  <div class="card-big__head">
+                    <div class="card-big--index">01</div>
+                    <h4 class="card-big--title title--sm color--black">Create an Account</h4>
+                  </div>
 
-                  <div class="card__content">
-                    <h4 class="card--title title--sm color--black">Create an Account</h4>
-                    <p class="card--text text--md color--dark-gray">
+                  <div class="card-big__content">
+                    <p class="card-big--text text--md color--dark-gray">
                       Sign up for an account by providing your basic information and completing the registration process.
                     </p>
                   </div>
@@ -241,13 +243,15 @@
             </div>
 
             <div class="col col-12 col-lg-4">
-              <div class="card__wrapper">
-                <div class="card card--lg card--orange">
-                  <div class="card--index">02</div>
+              <div class="card-big__wrapper">
+                <div class="card-big card-big--blue">
+                  <div class="card-big__head">
+                    <div class="card-big--index">02</div>
+                    <h4 class="card-big--title title--sm color--black">Fund Your Account</h4>
+                  </div>
 
-                  <div class="card__content">
-                    <h4 class="card--title title--sm color--black">Fund Your Account</h4>
-                    <p class="card--text text--md color--dark-gray">
+                  <div class="card-big__content">
+                    <p class="card-big--text text--md color--dark-gray">
                       Choose from a variety of convenient payment methods to deposit funds into your trading account.
                     </p>
                   </div>
@@ -256,13 +260,15 @@
             </div>
 
             <div class="col col-12 col-lg-4">
-              <div class="card__wrapper">
-                <div class="card card--lg card--blue">
-                  <div class="card--index">03</div>
+              <div class="card-big__wrapper">
+                <div class="card-big card-big--black">
+                  <div class="card-big__head">
+                    <div class="card-big--index">03</div>
+                    <h4 class="card-big--title title--sm color--black">Start Trading</h4>
+                  </div>
 
-                  <div class="card__content">
-                    <h4 class="card--title title--sm color--black">Start Trading</h4>
-                    <p class="card--text text--md color--dark-gray">
+                  <div class="card-big__content">
+                    <p class="card-big--text text--md color--dark-gray">
                       You can start exploring the markets, executing trades, and taking advantage of trading opportunities.
                     </p>
                   </div>
