--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="https://velmoren.github.io/bbvc/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BBVC</title>
-  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-DkxW94LA.js"></script>
-  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-noZYI9OG.css">
+  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-BVsLJ943.js"></script>
+  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-0w4Xjh3x.css">
 </head>
 
 <body>
@@ -80,22 +80,22 @@
 
         <div class="container hero-variables">
           <div class="hero-variables__item">
-            <h3 class="title title--lg color--orange">150 000+</h3>
+            <h3 class="title title--md color--orange">150 000+</h3>
             <p class="text text--sm color--dark-gray">Served Clients</p>
           </div>
 
           <div class="hero-variables__item">
-            <h3 class="title title--lg color--orange">300+</h3>
+            <h3 class="title title--md color--orange">300+</h3>
             <p class="text text--sm color--dark-gray">Trading Instruments</p>
           </div>
 
           <div class="hero-variables__item">
-            <h3 class="title title--lg color--orange">20+</h3>
+            <h3 class="title title--md color--orange">20+</h3>
             <p class="text text--sm color--dark-gray">Destinations Worldwide</p>
           </div>
 
           <div class="hero-variables__item">
-            <h3 class="title title--lg color--orange">$1 Billion</h3>
+            <h3 class="title title--md color--orange">$1 Billion</h3>
             <p class="text text--sm color--dark-gray">Monthly Trades</p>
           </div>
         </div>
@@ -107,7 +107,7 @@
             <div class="col">
               <div class="title-group__wrapper -responsive">
                 <div class="title-group" style="max-width: 500px;">
-                  <h2 class="title title--lg color--black">
+                  <h2 class="title title--md color--black">
                     Your Trusted Trading Partner
                   </h2>
                 </div>
@@ -196,7 +196,7 @@
             <div class="col">
               <div class="title-group__wrapper -centered">
                 <div class="title-group" style="max-width: 500px;">
-                  <h2 class="title title--lg color--black">
+                  <h2 class="title title--md color--black">
                     Why Choose Us
 
                     <img src="https://velmoren.github.io/bbvc/images/logo.svg" alt="logo">
@@ -288,7 +288,7 @@
             <div class="col">
               <div class="title-group__wrapper -responsive">
                 <div class="title-group" style="max-width: 500px;">
-                  <h2 class="title title--lg color--black">
+                  <h2 class="title title--md color--black">
                     Access to 8 Asset Classes
                   </h2>
                 </div>
@@ -414,7 +414,7 @@
             <div class="col">
               <div class="title-group__wrapper -responsive">
                 <div class="title-group" style="max-width: 500px;">
-                  <h2 class="title title--lg color--black">
+                  <h2 class="title title--md color--black">
                     It is easy to start
                   </h2>
 
@@ -494,7 +494,7 @@
               <div class="banner__box">
 
                 <div class="title-group">
-                  <h2 class="title title--lg color--white">
+                  <h2 class="title title--md color--white">
                     Try demo trading
                   </h2>
 
