--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="https://velmoren.github.io/bbvc/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BBVC</title>
-  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-BVsLJ943.js"></script>
-  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-0w4Xjh3x.css">
+  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-7J9TTMsn.js"></script>
+  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-SvQ4EQMH.css">
 </head>
 
 <body>
@@ -105,7 +105,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="title-group__wrapper -responsive">
+              <div class="title-group__wrapper -responsive mb-5">
                 <div class="title-group" style="max-width: 500px;">
                   <h2 class="title title--md color--black">
                     Your Trusted Trading Partner
@@ -194,7 +194,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="title-group__wrapper -centered">
+              <div class="title-group__wrapper -centered mb-5">
                 <div class="title-group" style="max-width: 500px;">
                   <h2 class="title title--md color--black">
                     Why Choose Us
@@ -286,7 +286,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="title-group__wrapper -responsive">
+              <div class="title-group__wrapper -responsive mb-5">
                 <div class="title-group" style="max-width: 500px;">
                   <h2 class="title title--md color--black">
                     Access to 8 Asset Classes
@@ -412,7 +412,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="title-group__wrapper -responsive">
+              <div class="title-group__wrapper -responsive mb-5">
                 <div class="title-group" style="max-width: 500px;">
                   <h2 class="title title--md color--black">
                     It is easy to start
