--- a/account-types.html
+++ b/account-types.html
@@ -318,7 +318,7 @@
                 <div class="card-big card-big--orange">
                   <div class="card-big__head">
                     <div class="card-big--index">01</div>
-                    <h4 class="card-big--title title--sm color--black">Create an Account</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Create an Account</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -336,7 +336,7 @@
                 <div class="card-big card-big--blue">
                   <div class="card-big__head">
                     <div class="card-big--index">02</div>
-                    <h4 class="card-big--title title--sm color--black">Fund Your Account</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Fund Your Account</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -353,7 +353,7 @@
                 <div class="card-big card-big--black">
                   <div class="card-big__head">
                     <div class="card-big--index">03</div>
-                    <h4 class="card-big--title title--sm color--black">Start Trading</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Start Trading</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -374,7 +374,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="banner__box">
+              <div class="banner__box banner--orange">
 
                 <div class="title-group">
                   <h2 class="title title--md color--white">
