--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </div>
                 </div>
 
-                <div class="partner-image">
+                <div class="partner-image partner-image--1">
                   <img src="/images/partner/image-1.png" alt="image">
                 </div>
               </div>
@@ -433,7 +433,7 @@
                 <div class="card-big card-big--orange">
                   <div class="card-big__head">
                     <div class="card-big--index">01</div>
-                    <h4 class="card-big--title title--sm color--black">Create an Account</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Create an Account</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -451,7 +451,7 @@
                 <div class="card-big card-big--blue">
                   <div class="card-big__head">
                     <div class="card-big--index">02</div>
-                    <h4 class="card-big--title title--sm color--black">Fund Your Account</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Fund Your Account</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -468,7 +468,7 @@
                 <div class="card-big card-big--black">
                   <div class="card-big__head">
                     <div class="card-big--index">03</div>
-                    <h4 class="card-big--title title--sm color--black">Start Trading</h4>
+                    <h4 class="card-big--title title--extra-sm color--black">Start Trading</h4>
                   </div>
 
                   <div class="card-big__content">
@@ -489,7 +489,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="banner__box">
+              <div class="banner__box banner--orange">
 
                 <div class="title-group">
                   <h2 class="title title--md color--white">
