--- a/trading.html
+++ b/trading.html
@@ -320,7 +320,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="banner__box">
+              <div class="banner__box banner--orange">
 
                 <div class="title-group">
                   <h2 class="title title--md color--white">
