--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="https://velmoren.github.io/bbvc/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BBVC</title>
-  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-CjkbHVd_.js"></script>
-  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-Dclqtc3K.css">
+  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-BQpA32hu.js"></script>
+  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-Cm4yPvjF.css">
 </head>
 
 <body>
@@ -121,11 +121,11 @@
             <div class="col">
               <div class="partner-wrapper">
 
-                <div class="partner-row-list">
+                <div class="partner-row-list partner-row-list--1">
                   <div class="partner-row">
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
+                        <div class="partner-row__item__head--icon -orange -md">
                           <img src="https://velmoren.github.io/bbvc/images/icons/status-up.svg" alt="status-up">
                         </div>
 
@@ -138,8 +138,8 @@
                     </div>
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="https://velmoren.github.io/bbvc/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="https://velmoren.github.io/bbvc/images/icons/bitcoin-convert.svg" alt="bitcoin-convert">
                         </div>
 
                         <h2 class="text text--lg color--black">Digital Assets</h2>
@@ -154,8 +154,8 @@
                   <div class="partner-row">
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="https://velmoren.github.io/bbvc/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="https://velmoren.github.io/bbvc/images/icons/coin.svg" alt="coin">
                         </div>
 
                         <h2 class="text text--lg color--black">Currency Exchange</h2>
@@ -167,8 +167,8 @@
                     </div>
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="https://velmoren.github.io/bbvc/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="https://velmoren.github.io/bbvc/images/icons/global-search.svg" alt="global-search">
                         </div>
 
                         <h2 class="text text--lg color--black">Global Markets</h2>
