--- a/futures-trading.html
+++ b/futures-trading.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-      <section class="hero forex-trading-hero">
+      <section class="hero futures-trading-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Forex Trading</h1>
+                <h1 class="title color--white">Futures Trading</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on 70+ FX pairs and benefit from tight spreads and fast order execution
+                  Trade CFDs on Futures from around the world and explore endless trading opportunities
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -223,7 +223,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt4.svg" alt="fxpro-mt4">
                         </div>
                       </div>
-
+  
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro cTrader</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -232,7 +232,7 @@
                       </div>
                     </div>
                   </div>
-
+  
                   <div class="partner-row">
                     <div class="partner-row__item -left">
                       <div class="partner-row__item__head">
@@ -240,7 +240,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-ctrader.svg" alt="fxpro-ctrader">
                         </div>
                       </div>
-
+  
                       <div>
                         <h2 class="text text--lg color--black">FxPro MetaTrader 4</h2>
                         <p class="text text--sm color--dark-gray">
@@ -254,7 +254,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt5.svg" alt="fxpro-mt5">
                         </div>
                       </div>
-
+  
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro MetaTrader 5</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -320,21 +320,6 @@
                     <h4 class="card--title text--md color--black">Forex Articles</h4>
                     <p class="card--text text--sm color--dark-gray">
                       Informative and detailed articles on various aspects of Forex trading.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
-              <div class="card__wrapper">
-                <div class="card">
-                  <div class="card--icon"><img src="https://velmoren.github.io/bbvc/images/icons/calculator.svg" alt="calculator"></div>
-
-                  <div class="card__content">
-                    <h4 class="card--title text--md color--black">Forex Trading Calculators</h4>
-                    <p class="card--text text--sm color--dark-gray">
-                      Estimate your trading costs and required margins with the online calculators.
                     </p>
                   </div>
                 </div>
@@ -418,104 +403,21 @@
           <div class="row mb-40px">
             <div class="col">
               <p class="text text--extra-lg color--white">
-                The foreign exchange market (FX) as a whole, consists of many types of markets, including Spot FX, Future
-                derivatives, Forward Derivatives, and finally the CFD derivatives market, which is the most popular for
-                retail clients.
+                Futures are financial contracts for the specific asset to be bought or sold at a set time in the future.
+                The final price level is determined by both parties, a buyer and a seller, and is known as the forward
+                price. The specified date of the future payment is known as the expiration date.
               </p>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
-              <p class="text text--extra-md color--light-gray mb-2">
-                All forex trading transactions combined make up the largest and most liquid financial market, with an
-                average daily volume of over $5 trillion.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                The FX CFD derivatives market is made up of buyers and sellers, the main participants being large
-                international banks, who place orders via electronic trading systems. This market is traded OTC (not
-                traded on any regulated exchange) and as such there is no uniform price but each of the main
-                international banks is providing its own quotes with the spot market acting as the point of reference
-                for the quotes provided.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                It is worth mentioning that the spot FX market is also an OTC market dominated by the large
-                international banks.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                In forex trading, spot price of a currency pair is influenced by several factors, such as the economic
-                outlook and geopolitical events in that region, as well as news data releases which may be perceived
-                positively or negatively by the market.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                Contracts for difference (CFDs), allow traders to buy (go long) or sell (go short), and make profit or
-                loss from price movements, without having to physically purchase and exchange the underlying currency.
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                FX is quoted in pairs, with each representing a global currency or economy. The first currency is called
-                the ‘base’ currency (representing the volume you wish to trade) and the second is called the ‘term’ or
-                ‘quote’ currency (representing the current exchange rate).
-              </p>
-            </div>
-
-            <div class="col col-12 col-lg-6">
-              <p class="text text--extra-md color--light-gray mb-2">
-                For example, the price of EUR/USD represents the amount of $USD that can be exchanged for €1.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                EUR/USD = 1.11361
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                This means that currently, €1 is equal to $1.11361
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                Prices are constantly fluctuating based on market conditions
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                To put it simply, traders would go long if they believe that the base currency will rise in value
-                against the term currency and would profit from an increase in price. On the other hand, if traders’
-                believe that the value of the base currency will fall in relation to the term, they will place a sell
-                trade to try to profit from falling prices. If prices move in the opposite direction to the traders’
-                forecast, they will make a loss
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                FX currency trading is typically calculated in Pips, meaning that depending on your trade size, each pip
-                is equal to a specific monetary value of the ‘term’ currency. This pip value is used to determine the
-                PnL (profit or loss), based on how many pips you gain or lose in a trade, and is also used to display
-                spread (the difference between the bid and ask prices)
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-2">
-                At FxPro we quote all FX pairs to an extra digit after the pip, meaning that the last digit in any quote
-                refers to a Point (10% of a Pip).
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                In FX currency trading, fractional pricing allows us to offer tighter spreads and provide more accurate
-                pricing
-              </p>
-            </div>
-          </div>
-
-          <div class="row">
             <div class="col">
-              <div class="bg-block bg-block--md bg-block--dark-gray">
-                <p class="text text--lg color--white">
-                  If you are new to online forex trading, we would recommend going through our online educational
-                  section to familiarise yourself with the market and how ‘Contracts for Difference’ trading works. We
-                  also provide ‘watch and learn’ videos and PDF guides.
-                </p>
-              </div>
+              <p class="text text--extra-md color--light-gray mb-2">
+                Contract for difference (CFD) on futures allow for trade on the price fluctuations of a wide range of
+                assets: commodities, indices and energy. If investors make a forecast about the quotes increase, they
+                open a Buy position on the trading platform. If they think the chart will move down, they make an online
+                order to Sell. Start trading futures with FxPro to diversify your investor account!
+              </p>
             </div>
           </div>
         </div>
