--- a/spot-indices.html
+++ b/spot-indices.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-      <section class="hero futures-trading-hero">
+      <section class="hero spot-indices-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Futures Trading</h1>
+                <h1 class="title color--white">Spot Indices</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Futures from around the world and explore endless trading opportunities
+                  Trade CFDs on popular Indices from across Europe, Asia and America.
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -223,7 +223,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt4.svg" alt="fxpro-mt4">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro cTrader</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -232,7 +232,7 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <div class="partner-row">
                     <div class="partner-row__item -left">
                       <div class="partner-row__item__head">
@@ -240,7 +240,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-ctrader.svg" alt="fxpro-ctrader">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black">FxPro MetaTrader 4</h2>
                         <p class="text text--sm color--dark-gray">
@@ -254,7 +254,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt5.svg" alt="fxpro-mt5">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro MetaTrader 5</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -320,6 +320,21 @@
                     <h4 class="card--title text--md color--black">Forex Articles</h4>
                     <p class="card--text text--sm color--dark-gray">
                       Informative and detailed articles on various aspects of Forex trading.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="https://velmoren.github.io/bbvc/images/icons/calculator.svg" alt="calculator"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--md color--black">Forex Trading Calculators</h4>
+                    <p class="card--text text--sm color--dark-gray">
+                      Estimate your trading costs and required margins with the online calculators.
                     </p>
                   </div>
                 </div>
@@ -395,7 +410,7 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">What Are Indices?</p>
               </div>
             </div>
           </div>
@@ -403,20 +418,49 @@
           <div class="row mb-40px">
             <div class="col">
               <p class="text text--extra-lg color--white">
-                Futures are financial contracts for the specific asset to be bought or sold at a set time in the future.
-                The final price level is determined by both parties, a buyer and a seller, and is known as the forward
-                price. The specified date of the future payment is known as the expiration date.
+                World indices are indicators of price changes for a certain group of securities. The stock exchange
+                index can be explained as a “basket” of shares united by a common basis. Trading indices can be compared
+                to opening positions on the courses of several dozen stocks at once.
               </p>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
+            <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
+              <p class="text text--extra-md color--light-gray mb-3">
+                The most important thing is determining the exact stocks or bonds each index is formed from. The set of
+                shares included in the spot index value calculation determines the information that can be obtained by
+                observing the dynamics of its course
+              </p>
+
+              <p class="text text--extra-md color--light-gray mb-3">
+                In general, the main purpose of world indices is to create a powerful indicator for investors to
+                characterise the direction of companies’ quotes in a particular industry. Studying the dynamics of major
+                indices helps to understand the impact of certain events on the value of securities.
+              </p>
+
+              <p class="text text--extra-md color--light-gray mb-3">
+                During trading indices, keep in mind that the reaction to the economic news published may not correspond
+                with expectations and forecasts.
+              </p>
+
               <p class="text text--extra-md color--light-gray">
-                Contract for difference (CFD) on futures allow for trade on the price fluctuations of a wide range of
-                assets: commodities, indices and energy. If investors make a forecast about the quotes increase, they
-                open a Buy position on the trading platform. If they think the chart will move down, they make an online
-                order to Sell. Start trading futures with FxPro to diversify your investor account!
+                For example, if there is a rise in oil prices, it is logical to expect an increase in the shares of all
+                the oil companies.
+              </p>
+            </div>
+
+            <div class="col col-12 col-lg-6">
+              <p class="text text--extra-md color--light-gray mb-3">
+                However, different stocks grow at different speeds, while some of them may not respond to such news at all. In this case, the spot index helps traders to understand the overall trend of this market segment without the need to assess the position of lots of different companies.
+              </p>
+
+              <p class="text text--extra-md color--light-gray mb-3">
+                Observation and trading indices give insights into how the different sectors of the economy trade in comparison with each other. Here at FxPro we are glad to offer the trading of CFD on major indices, which makes it possible to join the price movement not only for a rise, but also a fall.
+              </p>
+
+              <p class="text text--extra-md color--light-gray">
+                Trading indices is popular among FxPro traders due to its comprehensive terms, accurate quotes from several suppliers and versatile analytics. After all, in order to understand the logic of the index behaviour, you need to pay attention to the corporate news of each of the companies included, as well as on events affecting the wider industry as a whole.
               </p>
             </div>
           </div>
